Atualização do spring boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 spring.messages.encoding=UTF-8
-
 server.tomcat.uri-encoding=UTF-8
 server.port= 8181
 spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-
+spring.data.rest.base-path=rest
 spring.datasource.url=jdbc:postgresql://localhost:5432/aps2017
 spring.datasource.username=postgres
 spring.datasource.password=123
-spring.data.rest.base-path=rest
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+ 
